--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ influxdb:
     - 'env.influxdb'
   volumes:
     - "./influxdb/data:/var/lib/influxdb"
+  restart: always
 
 grafana:
   image: grafana/grafana:latest
@@ -22,3 +23,4 @@ grafana:
   volumes:
     - "./grafana/data:/var/lib/grafana"
     - "./grafana/config:/etc/grafana"
+  restart: always
